--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
+    "dotenv": "^16.0.3",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
     "moment": "^2.29.4",
     "next": "13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-google-map-picker": "^1.2.3",
     "react-icons": "^4.6.0",
     "typescript": "4.8.4"
   },
