--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
     "moment": "^2.29.4",
+    "netlify": "^13.0.2",
     "next": "13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
